--- a/simple_js_site/.vscode/settings.json
+++ b/simple_js_site/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\django2\\python.exe",
+    "python.pythonPath": "C:\\Miniconda3\\envs\\django2\\python.exe",
     "python.linting.pylintEnabled": true
 }
